--- a/web/assets/style.css
+++ b/web/assets/style.css
@@ -1,6 +1,6 @@
 .wall{
     
-    background-image: url('b2.jpg') !important;
+    background-image: url('b3.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     
