--- a/web/assets/style.css
+++ b/web/assets/style.css
@@ -1,6 +1,6 @@
-.wall{
+.co{
     
-    background-image: url('b3.jpg');
+    background: url('b1.jpg') !important;
     background-repeat: no-repeat;
     background-size: cover;
     
